--- a/projects/kage-ui/src/components/select/select.component.scss
+++ b/projects/kage-ui/src/components/select/select.component.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     .kage-select-label-view{
       margin-bottom: 8px;
+      margin-top: .4px;
       p{
         margin: 0;
         color: var(--color-dark);
@@ -46,7 +47,7 @@
           display: flex;
           justify-content: space-between;
           align-items: center;
-          padding: 8px 10px;
+          padding: 9px 10px;
           font-size: 15px;
         }
       }
